--- a/EduAssist.html
+++ b/EduAssist.html
@@ -25,7 +25,7 @@
 
 <body>
     <div>
-        <div class="header-blue" style="background-color: #75a7d8;">
+        <div class="header-blue" style="background-color: #75a7d8;height: 100vh;">
             <nav class="navbar navbar-default navigation-clean-search">
                 <div class="container">
                     <div class="navbar-header"><a class="navbar-brand navbar-link" href="index.html">Swapnil Chandra</a>
