--- a/dinnercall.html
+++ b/dinnercall.html
@@ -27,7 +27,7 @@
 
 <body>
     <div>
-        <div class="header-blue" style="background-color: indianred">
+        <div class="header-blue" style="background-color: indianred;height: 100vh;">
             <nav class="navbar navbar-default navigation-clean-search">
                 <div class="container">
                     <div class="navbar-header"><a class="navbar-brand navbar-link" href="index.html">Swapnil Chandra</a>
