--- a/musicalmoods.html
+++ b/musicalmoods.html
@@ -26,7 +26,7 @@
 
 <body>
     <div>
-        <div class="header-blue" style="background-image: url(Projects/MusicalMoods/mm.jpg);background-size: cover;">
+        <div class="header-blue" style="background-image: url(Projects/MusicalMoods/mm.jpg);background-size: cover;height: 100vh;">
             <nav class="navbar navbar-default navigation-clean-search">
                 <div class="container">
                     <div class="navbar-header"><a class="navbar-brand navbar-link" href="index.html">Swapnil Chandra</a>
