--- a/index.html
+++ b/index.html
@@ -65,23 +65,34 @@
     <!--( a ) Introduction -->
 
     <div class="introduction">
-        <img alt="" src="images/dp.jpg">
+        <!--<img alt="" src="images/dp.jpg">-->
         <div class="mask">
         </div>
+        <img alt="" src="images/dp.jpg" class="img-circle">
         <div class="intro-content">
-            <h1>HI!<br>
-                I'M <span>SWAPNIL</span> CHANDRA</h1>
-            <h2>UX DESIGNER</h2>
-            <p class="social-media hidden-xs">
+            <h1><strong>HI!<br>
+                I'M SWAPNIL CHANDRA</strong></h1>
+            <h2>THE DESIGN GIRL</h2>
+            <div class="social-media hidden-xs hidden">
                 <a href="https://www.facebook.com/chandra.swapnil.1" class="fa fa-facebook hidden" data-toggle="tooltip" title="Facebook"></a>
                 <a href="#" class="fa fa-twitter hidden" data-toggle="tooltip" title="Twitter"></a>
                 <a href="https://plus.google.com/117074819498227813410?hl=en-GB" class="fa fa-plus hidden" data-toggle="tooltip" title="Google+"></a>
-                <a href="https://www.linkedin.com/in/swapchan" class="fa fa-linkedin" data-toggle="tooltip" title="Linkedin"></a>
                 <a href="#" class="fa fa-behance hidden" data-toggle="tooltip" title="Behance"></a>
                 <a href="#" class="fa fa-flickr hidden" data-toggle="tooltip" title="Flicker"></a>
                 <a href="https://www.instagram.com/swapnil_chandra/" class="fa fa-instagram hidden" data-toggle="tooltip" title="Instagram"></a>
-            </p>
 
+                <a href="https://www.linkedin.com/in/swapchan" class="fa fa-linkedin" data-toggle="tooltip" title="Linkedin"></a>
+                <span href="#">(314) 201 0701</span>
+                <span href="#">swapchan@iupui.edu</span>
+                <span href="#">Indianapolis, Indiana</span>
+            </div>
+<div class="about-myself">
+    <p style="font-size:22px;text-align: center;"><b>Idealist-Creative-Designer</b></p><br/>
+    <p>A software is successful if its loved by the <i>users.</i></p>
+    <p>A Perfect Design + Great Functionality = Happy User.</p>
+    <p style="font-size: 20px"><i>I provide the perfect design. How?</i></p>
+    <p>Gather requirements - User centric deep thinking – Discuss – Design – Ask for user feedback</p>
+</div>
             <!-- Social Media Icons [ END ] -->
 
         </div>
@@ -99,7 +110,7 @@
                     <i class="fa fa-user"></i>
                 </div>
                 <div class="col-sm-10">
-                    <h2>PR<span>O</span>FILE</h2>
+                    <h2>PROFILE</h2>
                     <h3>Some words about me.</h3>
                 </div>
             </div>
@@ -116,7 +127,7 @@
                     <i class="fa fa-graduation-cap"></i>
                 </div>
                 <div class="col-sm-10">
-                    <h2>RE<span>S</span>UME</h2>
+                    <h2>RESUME</h2>
                     <h3>My experience and skills.</h3>
                 </div>
             </div>
@@ -133,7 +144,7 @@
                     <i class="fa fa-briefcase"></i>
                 </div>
                 <div class="col-sm-10">
-                    <h2>PORT<span>F</span>OLIO</h2>
+                    <h2>PORTFOLIO</h2>
                     <h3>Have a look at my work.</h3>
                 </div>
             </div>
@@ -150,7 +161,7 @@
                     <i class="fa fa-envelope-o"></i>
                 </div>
                 <div class="col-sm-10">
-                    <h2>CO<span>N</span>TACT</h2>
+                    <h2>CONTACT</h2>
                     <h3>Say hello or find me.</h3>
                 </div>
             </div>
